test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_var_init_none_array.plx
pub fn main(none) i32 {
    x: [2]none = $(nil, nil)
    return 0
}
